--- a/compose.yaml
+++ b/compose.yaml
@@ -2,8 +2,8 @@ services:
   pgvector:
     image: agnohq/pgvector:16
     restart: unless-stopped
-    ports:
-      - "5432:5432"
+#    ports:
+#      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
     environment:
@@ -21,7 +21,7 @@ services:
     command: uvicorn api.main:app --host 0.0.0.0 --port 8000 --reload
     restart: unless-stopped
     ports:
-      - "8000:8000"
+      - "${API_PORT}:8000"
     volumes:
       - .:/app
     environment:
