--- a/compose.yaml
+++ b/compose.yaml
@@ -17,7 +17,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: ${IMAGE_NAME:-agent-api}:${IMAGE_TAG:-latest}
+#    image: ${IMAGE_NAME:-agent-api}:${IMAGE_TAG:-latest}
     command: uvicorn api.main:app --host 0.0.0.0 --port 8000 --reload
     restart: unless-stopped
     ports:
